add simple readme

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle"  role="button" aria-haspopup="true" aria-expanded="false">
-                            <img src="img/icons/wash.svg" class="nav-category-logo">
+                            <!-- <img src="img/icons/wash.svg" class="nav-category-logo"> -->
                             <div class="nav-category-title">Πλυντήρια &<br>Στεγνωτήρια</div>
                         </a>
                         <ul class="dropdown-menu">
